--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 <body>
     <h1>List of my Practice in HTML</h1>
     <h2>
-    <ol>
-        <li><a href="./2.1+Heading+Element/2.1 Heading Element/index.html">Heading Elements</a></li>
-        <li><a href="./2.2+Paragraph+Element/2.2 Paragraph Element/index.html">Paragraph Element</a></li>
-        <li><a href="./2.3+Void+Elements/2.3 Void Elements/index.html">Void Elements</a></li>
-        <li><a href="./2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">Movie Ranking - 1st Project</a></li>
-        <li><a href="./3.0+List+Elements/3.0 List Elements/index.html">List Elements</a></li>
-        <li><a href="./3.1+Nesting+and+Indentation/3.1 Nesting and Indentation/index.html">Nesting and Indentation</a></li>
-        <li><a href="./3.2+Anchor+Elements/3.2 Anchor Elements/index.html">Anchor Element</a></li>
-        <li><a href="./3.3+Image+Elements/3.3 Image Elements/index.html">Image Element</a></li>
-        <li><a href="./3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html">Birthday Invitation 2nd Project</a></li>
-        <li><a href="./4.0+File+Paths/4.0 File Paths/Folder0/index.html"></a>File Path Practice</li>
-        <li><a href="./4.1+Webpages/index.html">WebPages Linking</a></li>
-        <li><a href="./4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html">HTML Porfolio Project</a></li>
-    </ol>
+        <ol>
+            <li><a href="./2.1+Heading+Element/2.1 Heading Element/index.html">Heading Elements</a></li>
+            <li><a href="./2.2+Paragraph+Element/2.2 Paragraph Element/index.html">Paragraph Element</a></li>
+            <li><a href="./2.3+Void+Elements/2.3 Void Elements/index.html">Void Elements</a></li>
+            <li><a href="./2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">Movie Ranking - 1st Project</a></li>
+            <li><a href="./3.0+List+Elements/3.0 List Elements/index.html">List Elements</a></li>
+            <li><a href="./3.1+Nesting+and+Indentation/3.1 Nesting and Indentation/index.html">Nesting and Indentation</a></li>
+            <li><a href="./3.2+Anchor+Elements/3.2 Anchor Elements/index.html">Anchor Element</a></li>
+            <li><a href="./3.3+Image+Elements/3.3 Image Elements/index.html">Image Element</a></li>
+            <li><a href="./3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html">Birthday Invitation 2nd Project</a></li>
+            <li><a href="./4.0+File+Paths/4.0 File Paths/Folder0/index.html">File Path Practice</a></li>
+            <li><a href="./4.1+Webpages/index.html">WebPages Linking</a></li>
+            <li><a href="./4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html">HTML Porfolio Project</a></li>
+        </ol>
     </h2>
 </body>
 </html>
