add some content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>List of my Practice in HTML</h1>
-    <h2>
+    <h4>
+        <h3>Udemy Web Development Project</h3>
         <ol>
             <li><a href="./public/Heading Element/index.html">Heading Elements</a></li>
             <li><a href="./public/2.2+Paragraph+Element/2.2 Paragraph Element/index.html">Paragraph Element</a></li>
@@ -22,6 +23,10 @@
             <li><a href="./public/4.1+Webpages/index.html">WebPages Linking</a></li>
             <li><a href="./public/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html">HTML Porfolio Project</a></li>
         </ol>
-    </h2>
+        <h3>Free Code Academy Project</h3>
+        <ol>
+            <li><a href="./public/freeCodeCamp/cat.html">Project - Cat Website</a></li>
+        </ol>
+    </h4>
 </body>
 </html>
