Add the add some content in resume

--- a/public/onlineResume/index.html
+++ b/public/onlineResume/index.html
@@ -74,6 +74,30 @@
             </ul>
         </ul>
     </section>
+    <section>
+        <h2>Others</h2>
+        <ul>
+            <li>Member of the Student University Organization:</li>
+            <ul>
+                <li>October 28, 2021 - May 20, 2022 
+                    <ul>
+                        <li>Student Officer of Manila Technical Institute Christian Fellowship (MTICF)</li>
+                    </ul>
+                </li>
+                <li>
+                    June 2022 - May 20, 2023
+                    <ul>
+                        <li>President of Manila Technical Institute Christian Fellowship (MTICF)</li>
+                    </ul>
+                </li>
+            </ul>
+            <li><a href="./public/hobbies.html">My Hobbies</a></li>
+            <li><a href="./public/contact.html">Contact Me</a></li>
+        </ul>
+    </section>
     </main>
+    <footer>
+        <p>© James Reniel Bambao. All rights reserved.</p>
+    </footer>
 </body>
 </html>
